Added various plugins, migrating news to RESTful routing

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -6,3 +6,9 @@ site_title:
 require_newacct_activation:
   default: true
 
+email_from:
+  default: noreply@example.com
+
+frontpage_news_limit:
+  default: 5
+
