--- a/config/settings.yml
+++ b/config/settings.yml
@@ -4,7 +4,7 @@ site_title:
   default: LANRails
  
 require_newacct_activation:
-  default: true
+  default: false
 
 email_from:
   default: noreply@example.com
