Added LAN69 style, completed basic forums, completed basic registration, ready for restricted prime-time use with upcoming LAN, overall LOTS of changes

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -17,7 +17,7 @@ require_newacct_activation:
   type: boolean
 
 enable_recaptcha:
-  default: true
+  default: false
   friendly: Enable reCaptcha
   type: boolean
 
