--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -4,4 +4,5 @@ auxiliary.org-netbeans-modules-web-client-tools-api.FIREFOX=true
 auxiliary.org-netbeans-modules-web-client-tools-api.INTERNET_5f_EXPLORER=false
 auxiliary.org-netbeans-modules-web-client-tools-api.serverdebug=true
 platform.active=Ruby
+rails.env=
 rails.port=3000
