--- a/config/settings.yml
+++ b/config/settings.yml
@@ -55,3 +55,13 @@ enable_tournaments:
   default: true
   friendly: Enable Tournaments
   type: boolean
+
+party_google_map_directions:
+  default: true
+  friendly: Enable Google Maps Link
+  type: boolean
+
+registrations_require_confirmation:
+  default: false
+  friendly: Require Confirmation of Registration
+  type: boolean
